--- a/spring-cloud-config-service/src/main/resources/bootstrap.yml
+++ b/spring-cloud-config-service/src/main/resources/bootstrap.yml
@@ -5,8 +5,9 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/chenhanghanghang/learningSpringDemo.git #配置文件所在仓库
-          username:1055985520@qq.com
-          password:chenhang_001root
+          uri: https://github.com/chenhanghanghang/learningSpringDemo #配置文件所在仓库
+          username: 1055985520@qq.com
+          password: chenhang_001root
           default-label: master #配置文件分支
           search-paths: config  #配置文件所在根目录
+          skip-ssl-validation: true
